src/style.css
@import url('https://fonts.googleapis.com/css2?family=Mohave:ital,wght@1,300&family=Roboto:wght@300&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: bisque;
}

.wrapper {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  filter: none;
}

.main-header {
  display: grid;
  grid-template-columns: auto 1fr 1fr;
  grid-template-rows: 1fr;
  grid-gap: 10px;
  align-items: center;
  justify-items: center;
  padding: 20px 50px;
  background: rgb(50, 50, 50);
}

.main-header img {
  height: 100px;
}

.main-header > * {
  color: #e67e22;
}

.main-header .res-name {
  justify-self: start;
}

.display-pizza {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(3, 1fr);
  margin: 50px;
}

.pizza-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: 1px solid black;
  padding: 5px;
  margin-top: 15px;
  margin-left: 20px;
  margin-right: 20px;
}

.pizza-container img {
  width: 50%;
  display: block;
  margin-left: auto;
  margin-right: auto;
  height: 50%;
}

.pizza-container button {
  width: 50%;
  margin: 10px;
  padding: 10px;
  border-radius: 3px;
}

.like-me {
  font-size: 28px;
  vertical-align: top;
  cursor: pointer;
}

.pop-up-comment-div {
  padding-top: 30px;
  padding-bottom: 30px;
  position: fixed;
  z-index: 1;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);
  top: 0;
  left: 0;
  overflow-y: scroll;
}

.inner-pop-up-comment-div {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 75%;
  height: 100%;
  height: auto;
  margin: 0 auto auto auto;
  padding: 50px;
  background-color: bisque;
  box-shadow: -5px 10px #bb8000;
  border-radius: 5px;
}

.recipe-title {
  margin: 50px;
  font-size: 30px;
}

.pop-up-img {
  width: auto;
  max-width: 500px;
  height: 400px;
}

.servings,
.cook-time {
  margin-top: 15px;
  font-size: 20px;
  padding-left: 5px;
}

.recipe {
  margin-top: 15px;
  font-size: 30px;
  padding-left: 5px;
}

.inspiration {
  padding-left: 5px;
}

.ingredients {
  font-size: 20px;
  margin-bottom: 15px;
}

.ingredient {
  margin-bottom: 7px;
}

.flex-container {
  display: flex;
  justify-content: center;
  gap: 50px;
}

.link:link,
.link:visited {
  color: #e67e22;
}

.comments-section {
  margin-top: 50px;
}

.comments-title {
  font-size: 30px;
  margin-bottom: 30px;
}

.comments-list {
  display: flex;
  flex-direction: column;
  list-style: none;
  background: white;
  border-radius: 5px;
  border: 2px solid white;
  width: 500px;
}

.user-name {
  font-weight: bold;
}

.leave-comm-text {
  font-size: 20px;
  margin: 30px auto;
}

.leave-comm {
  display: flex;
  flex-direction: column;
  gap: 15px;
  width: 500px;
}

.input-name,
.input-mess {
  padding-left: 10px;
  border-radius: 5px;
  border: none;
}

.input-name {
  height: 40px;
}

.input-mess {
  padding-top: 20px;
  height: 100px;
}

.pop-up-btn {
  width: 200px;
  cursor: pointer;
  background-color: #e67e22;
  color: white;
  margin-top: 20px;
  height: 40px;
  border-radius: 5px;
  border: none;
}

.pop-up-btn:hover,
.pop-up-btn:active {
  background-color: #fff;
  color: #e67e22;
  transition: background-color 0.2s;
}

.close-modul,
#reservation-close-btn {
  display: inline-block;
  position: absolute;
  top: 6%;
  right: 15%;
  font-size: 20px;
  height: 35px;
  width: 35px;
  text-align: center;
  z-index: 2;
  cursor: pointer;
  padding: 5px;
  color: #67798e;
  background-color: #ddd;
  border: 2px solid #ddd;
  border-radius: 5px;
}

#reservation-close-btn {
  top: 3%;
  right: 5%;
}

.res-container {
  position: fixed;
  top: 10%;
  bottom: 10%;
  left: 10%;
  right: 10%;
  overflow-y: scroll;
  display: grid;
  grid-template-columns: 1fr auto;
  grid-template-rows: auto 1fr auto auto;
  grid-template-areas:
    'header header'
    'image description'
    'reservations reservations'
    'form form';
  background-color: bisque;
  box-shadow: -5px 10px #bb8000;
  border-radius: 5px;
  padding: 20px;
  grid-gap: 10px;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.res-container::-webkit-scrollbar,
.pop-up-comment-div::-webkit-scrollbar {
  display: none;
}

.reservation-header {
  grid-area: header;
  padding: 20px;
  display: flex;
  justify-content: end;
}

.reservation-header button {
  padding: 5px;
}

.res-image-conatainer {
  grid-area: image;
  display: flex;
  justify-content: center;
}

.pizza-image {
  height: 400px;
}

.res-details {
  grid-area: description;
  padding: 0 20px;
}

.reservations {
  grid-area: reservations;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.reserve-header {
  display: flex;
  align-items: center;
  font-size: 20px;
  font-weight: 700;
}

.resrvation-record {
  display: flex;
  flex-direction: column;
  background: white;
  border-radius: 5px;
  border: 2px solid white;
  height: 300px;
  width: 500px;
  overflow-y: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.resrvation-record ::-webkit-scrollbar {
  display: none;
}

.resrvation-record > *,
.comments-list > * {
  padding: 10px;
  background: wheat;
}

.add-reserve-form {
  justify-self: center;
  grid-area: form;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(4, auto);
  grid-gap: 15px;
  width: 500px;
}

.add-reserve-form > * {
  padding: 10px;
  border-radius: 5px;
  border: none;
}

.add-reserve-form .submit-btn {
  justify-self: start;
  width: 200px;
  background-color: #e67e22;
  color: white;
}

.add-reserve-form .res-confirmation-msg {
  position: relative;
  left: 110%;
  bottom: 150%;
  font-size: 12px;
  border: 2px solid #05386b;
  width: 200px;
  background: #5cdb9580;
  color: #05386b;
  font-weight: 800;
  display: none;
  transition: all 5s;
}

.add-reserve-form .open {
  display: block;
}

.resrvation-record > *:nth-child(odd),
.comments-list > *:nth-child(odd) {
  background: #35280d;
  color: wheat;
}

.resrvation-record > *:first-child,
.comments-list > *:first-child {
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.resrvation-record > *:last-child,
.comments-list > *:last-child {
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}

.footer {
  width: 100%;
  height: 100px;
  background-color: rgb(50, 50, 50);
  color: #e67e22;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

